# the-forecaster

./: .gitignore  README.md  data.qmd  functions.R  pyproject.toml  run_app.py
.devcontainer/: devcontainer.json
Python/: app.py  issue_1.qmd  issue_2.qmd  piecewise_app.py
R/: issue_1.html  issue_1.qmd  issue_2.html  issue_2.qmd  issue_2_temp.qmd
R/issue_1_files/libs/bootstrap/: bootstrap-85c10ba73c7301af564f065c7ce6e7f0.min.css
data/: ca_hourly_electricity_demand.csv  ca_natural_gas_consumers.csv  us_monthly_natural_gas_demand.csv
diagrams/: piecewise_regression_workflow.drawio
docker/: Dockerfile.base-r  Dockerfile.r-dev  build_base-r.sh  build_r-dev.sh
docker/setting_files/: install_packages.R  install_uv.sh  packages.json  requirements-dev.txt  update_venv.sh
src/forecaster/: README.md  __init__.py  animation.py  examples.py  piecewise.py  plotly_viz.py  utils.py  visualization.py
